# comfyui-waas

./: .gitignore  README.md  __init__.py  copy2server.sh  pyproject.toml  refresh_models.sh
routes/: models.py  proxy.py  update.py
svelte/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
svelte/src/routes/: FilesList.svelte  MediaShow.svelte  PreviewModal.svelte
svelte/src/routes/icons/: Download.svelte  Expand.svelte  Next.svelte  Prev.svelte  RotateLeft.svelte  RotateRight.svelte  ZoomIn.svelte  ZoomOut.svelte
vue/: .env  .env.development  .gitignore  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
vue/src/: App.vue  main.ts
vue/src/api/: index.ts  models.ts
vue/src/components/: index.ts
vue/src/pages/: FailedModels.vue  NewModels.vue  index.vue
vue/src/styles/dark/: css-vars.css
vue/src/styles/light/: css-vars.css
vue/src/utils/: setIntroduction.ts
web/: index.js  waas.css  waas.js
