[project]
name = "comfyui-waas"
description = "This is an comfyui plugin for waas"
version = "1.0.0"
license = "LICENSE"
dependencies = ["tqdm", "pandas", "numpy", "requests", "urllib3"]

[project.urls]
Repository = "https://github.com/jyoketsu/comfyui-waas"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-waas"
Icon = ""
